--- a/index.html
+++ b/index.html
@@ -185,22 +185,23 @@
                     <a class="dropdown_icon">
                         <span class="material-symbols-outlined">
                             expand_more
-                    </span>
+                        </span>
                     </a>
-					</div>
-            <ul class="lan_list">
-							<li class="lan_list_detail">
-								<img class="list_img" src="./assets/javascript_icon.svg" alt="javascript">
-									<p>Javascript</p>
-							</li>
-							<li class="lan_list_detail">
-								<img class="list_img" src="./assets/html_icon.svg" alt="html">
-								<p>HTML</p></li>
-							<li class="lan_list_detail">
-								<img class="list_img" src="./assets/css_icon.svg" alt="css">
-								<p>CSS</p></li>
-						</ul>
-				</div>
+                </div>
+                <ul class="lan_list">
+                    <li class="lan_list_detail">
+                        <img class="list_img" src="./assets/javascript_icon.svg" alt="javascript">
+                        <p>Javascript</p>
+                    </li>
+                    <li class="lan_list_detail">
+                        <img class="list_img" src="./assets/html_icon.svg" alt="html">
+                        <p>HTML</p></li>
+                    <li class="lan_list_detail">
+                        <img class="list_img" src="./assets/css_icon.svg" alt="css">
+                        <p>CSS</p>
+                    </li>
+                </ul>
+            </div>
 				<div class="languages">
 					<div class="lan_head">
 						<div class="lan_heading">
@@ -209,7 +210,7 @@
 						<a class="dropdown_icon">
 							<span class="material-symbols-outlined">
 								expand_more
-								</span>
+                            </span>
 						</a>
 					</div>
 				</div>
@@ -222,7 +223,7 @@
 						<a class="dropdown_icon">
 							<span class="material-symbols-outlined">
 								expand_more
-								</span>
+                            </span>
 						</a>
 					</div>
 				</div>
