--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="project">
             <div>
-                <img src="./assets/SnapshootPortfolio1.svg" alt="">
+                <img src="./assets/SnapshootPortfolio1.svg" alt="snap">
             </div>
 
             <div class="projectDescription">
