changed regarding indentation

--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@
                         <h5>Languages</h5>
                     </div>
                     <a class="dropdown_icon">
-                        <span class="material-symbols-outlined">
-                            expand_more
-                        </span>
+                        <span class="material-symbols-outlined">expand_more</span>
                     </a>
                 </div>
                 <ul class="lan_list">
@@ -208,9 +206,7 @@
 							<h5>Frameworks</h5>
 						</div>
 						<a class="dropdown_icon">
-							<span class="material-symbols-outlined">
-								expand_more
-                            </span>
+							<span class="material-symbols-outlined">expand_more</span>
 						</a>
 					</div>
 				</div>
@@ -221,9 +217,7 @@
 							<h5>Skills</h5>
 						</div>
 						<a class="dropdown_icon">
-							<span class="material-symbols-outlined">
-								expand_more
-                            </span>
+							<span class="material-symbols-outlined">expand_more</span>
 						</a>
 					</div>
 				</div>
